--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@ index(1).css"/>
               <img src="https://github.com/Wolfmanbunnydeer/cmc2392kittty.github.io/blob/Wolfmanbunnydeer-patch-4/tumblr_d89089cc158184c5fed3113c44b5df5e_930e7be4_540.jpg" alt="Boy and His Tiger" class="print-only invisible"></a></div> 
 </div>
       <div class="column"><div align ="right"><h4>Lonely  Cow</h4></div>       
-            <div align ="right"><a href="http://mydrive.nvcc.edu/cmc2392/public/lonelycow.html"  class="user-avatar"><img src="http://mydrive.nvcc.edu/cmc2392/public/tumblr_7913fa95368c7a18be45fa1264a1bc50_473e1e08_400.jpg" alt="Lonely Cow"  class="print-only invisible"></a></div>
+            <div align ="right"><a href="http://mydrive.nvcc.edu/cmc2392/public/lonelycow.html"  class="user-avatar">
+               <img src="http://mydrive.nvcc.edu/cmc2392/public/tumblr_7913fa95368c7a18be45fa1264a1bc50_473e1e08_400.jpg" alt="Lonely Cow"  class="print-only invisible"></a></div>
 </div>      
       <div class="column"><div align ="center"><h5>Yawning Fox</h5></div>       
-           <div align ="center"><a href="http://mydrive.nvcc.edu/cmc2392/public/yawningfox.html"  class="user-avatar"><img src="http://mydrive.nvcc.edu/cmc2392/public/tumblr_ceae715b39848bbb6be61fb4bf0b6e8b_a06cde14_1280.jpg" alt="Yawning Fox" class="print-only invisible" width="300" height="400"></a></div></div>
+           <div align ="center"><a href="http://mydrive.nvcc.edu/cmc2392/public/yawningfox.html"  class="user-avatar">
+              <img src="http://mydrive.nvcc.edu/cmc2392/public/tumblr_ceae715b39848bbb6be61fb4bf0b6e8b_a06cde14_1280.jpg" alt="Yawning Fox" class="print-only invisible" width="300" height="400"></a></div></div>
     <div class="column"><div align ="center"><h6><b>Magic Fairy Kingdom Palace</b></h6></div>
-         <div align ="right"><a href="http://mydrive.nvcc.edu/cmc2392/public/MagicFairyKingdomPalace.html"  class="user-avatar"><img src="http://mydrive.nvcc.edu/cmc2392/public/palacechristmasjuglrxxq222taxxdssswerbs8dcglinktr4ee3.jpg" alt="Yawning Fox"  class="print-only invisible"  width="500"  height="500"></a></div></div>
+         <div align ="right"><a href="http://mydrive.nvcc.edu/cmc2392/public/MagicFairyKingdomPalace.html"  class="user-avatar">
+            <img src="http://mydrive.nvcc.edu/cmc2392/public/palacechristmasjuglrxxq222taxxdssswerbs8dcglinktr4ee3.jpg" alt="Yawning Fox"  class="print-only invisible"  width="500"  height="500"></a></div></div>
 </div>
 
 </body>
