--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ index(1).css"/>
 <h2>I cherish every art piece to open a view of my interactions with the world. The various forms of sensory impairments and handicaps make a space for my natural talent of viewing the world with colorful visual effects. From this position, my great inspiration is to paint the world with my own spirit in a deep sense of nature.</h2></p>
 
 <h2>Most recently I am painting artwork to embrace my vibrancy and unusual methods of using colors.
- Here is my painted canvas show on my site I had four top artworks linked with very brief detailed sources of clicking images("Boy and His Tiger", "Lonely Cow", "Yawning Fox", and "Magic Fairy Kingdom Palace", part favorite art subject.)</h2>
+Here is my painted canvas show on my site I had four top artworks linked with very brief detailed sources of clicking images
+   ("Boy and His Tiger", "Lonely Cow", "Yawning Fox", and "Magic Fairy Kingdom Palace", part favorite art subject.)</h2>
 
 
 </body>
@@ -39,16 +40,18 @@ index(1).css"/>
   <div class="row">
        <div class="column"> <font="Arial"><h3>The Boy And His Tiger</h3></font> 
            <div align ="center"><a href="https://raw.githubusercontent.com/Wolfmanbunnydeer/cmc23920/Art/tumblr_d89089cc158184c5fed3113c44b5df5e_930e7be4_540.jpg" class="user-avatar">
-              <img src="http://mydrive.nvcc.edu/cmc2392/public/tumblr_d89089cc158184c5fed3113c44b5df5e_930e7be4_540.jpg" alt="Boy and His Tiger" class="print-only invisible"></a></div> 
+              <img src="img/tumblr_d89089cc158184c5fed3113c44b5df5e_930e7be4_540.jpg" alt="Boy and His Tiger" class="print-only invisible"></a></div> 
 </div>
       <div class="column"><div align ="right"><h4>Lonely  Cow</h4></div>       
             <div align ="right"><a href="http://mydrive.nvcc.edu/cmc2392/public/lonelycow.html"  class="user-avatar">
-               <img src="http://mydrive.nvcc.edu/cmc2392/public/tumblr_7913fa95368c7a18be45fa1264a1bc50_473e1e08_400.jpg" alt="Lonely Cow"  class="print-only invisible"></a></div>
+               <img src="img/tumblr_7913fa95368c7a18be45fa1264a1bc50_473e1e08_400.jpg" alt="Lonely Cow"  class="print-only invisible"></a></div>
 </div>      
       <div class="column"><div align ="center"><h5>Yawning Fox</h5></div>       
-           <div align ="center"><a href="http://mydrive.nvcc.edu/cmc2392/public/yawningfox.html"  class="user-avatar"><img src="http://mydrive.nvcc.edu/cmc2392/public/tumblr_ceae715b39848bbb6be61fb4bf0b6e8b_a06cde14_1280.jpg" alt="Yawning Fox" class="print-only invisible" width="300" height="400"></a></div></div>
+           <div align ="center"><a href="http://mydrive.nvcc.edu/cmc2392/public/yawningfox.html"  class="user-avatar">
+              <img src="img/public/tumblr_ceae715b39848bbb6be61fb4bf0b6e8b_a06cde14_1280.jpg" alt="Yawning Fox" class="print-only invisible" width="300" height="400"></a></div></div>
     <div class="column"><div align ="center"><h6><b>Magic Fairy Kingdom Palace</b></h6></div>
-         <div align ="right"><a href="http://mydrive.nvcc.edu/cmc2392/public/MagicFairyKingdomPalace.html"  class="user-avatar"><img src="http://mydrive.nvcc.edu/cmc2392/public/palacechristmasjuglrxxq222taxxdssswerbs8dcglinktr4ee3.jpg" alt="Yawning Fox"  class="print-only invisible"  width="500"  height="500"></a></div></div>
+         <div align ="right"><a href="http://mydrive.nvcc.edu/cmc2392/public/MagicFairyKingdomPalace.html"  class="user-avatar">
+            <img src="img/palacechristmasjuglrxxq222taxxdssswerbs8dcglinktr4ee3.jpg" alt="Yawning Fox"  class="print-only invisible"  width="500"  height="500"></a></div></div>
 </div>
 
 </body>
