--- a/test/images/index(1)(2).html
+++ b/test/images/index(1)(2).html
@@ -39,19 +39,19 @@ Here is my painted canvas show on my site I had four top artworks linked with ve
 
   <div class="row">
        <div class="column"> <font="Arial"><h3>The Boy And His Tiger</h3></font> 
-           <div align ="center"><a href="https://raw.githubusercontent.com/Wolfmanbunnydeer/cmc23920/Art/tumblr_d89089cc158184c5fed3113c44b5df5e_930e7be4_540.jpg" class="user-avatar">
-              <img src="img/tumblr_d89089cc158184c5fed3113c44b5df5e_930e7be4_540.jpg" alt="Boy and His Tiger" class="print-only invisible"></a></div> 
+           <div align ="center"><a href="http://mydrive.nvcc.edu/cmc2392/public/tumblr_d89089cc158184c5fed3113c44b5df5e_930e7be4_540.jpg" class="user-avatar">
+              <img src="./image/tumblr_d89089cc158184c5fed3113c44b5df5e_930e7be4_540.jpg" alt="Boy and His Tiger" class="print-only invisible"></a></div> 
 </div>
       <div class="column"><div align ="right"><h4>Lonely  Cow</h4></div>       
             <div align ="right"><a href="http://mydrive.nvcc.edu/cmc2392/public/lonelycow.html"  class="user-avatar">
-               <img src="img/tumblr_7913fa95368c7a18be45fa1264a1bc50_473e1e08_400.jpg" alt="Lonely Cow"  class="print-only invisible"></a></div>
+               <img src="./image/tumblr_7913fa95368c7a18be45fa1264a1bc50_473e1e08_400.jpg" alt="Lonely Cow"  class="print-only invisible"></a></div>
 </div>      
       <div class="column"><div align ="center"><h5>Yawning Fox</h5></div>       
            <div align ="center"><a href="http://mydrive.nvcc.edu/cmc2392/public/yawningfox.html"  class="user-avatar">
-              <img src="img/public/tumblr_ceae715b39848bbb6be61fb4bf0b6e8b_a06cde14_1280.jpg" alt="Yawning Fox" class="print-only invisible" width="300" height="400"></a></div></div>
+              <img src="./image/public/tumblr_ceae715b39848bbb6be61fb4bf0b6e8b_a06cde14_1280.jpg" alt="Yawning Fox" class="print-only invisible" width="300" height="400"></a></div></div>
     <div class="column"><div align ="center"><h6><b>Magic Fairy Kingdom Palace</b></h6></div>
          <div align ="right"><a href="http://mydrive.nvcc.edu/cmc2392/public/MagicFairyKingdomPalace.html"  class="user-avatar">
-            <img src="img/palacechristmasjuglrxxq222taxxdssswerbs8dcglinktr4ee3.jpg" alt="Yawning Fox"  class="print-only invisible"  width="500"  height="500"></a></div></div>
+            <img src="./image/palacechristmasjuglrxxq222taxxdssswerbs8dcglinktr4ee3.jpg" alt="Yawning Fox"  class="print-only invisible"  width="500"  height="500"></a></div></div>
 </div>
 
 </body>
